<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/default_bg" >
    
    <RelativeLayout android:id="@+id/login_layout" 
        android:background="@drawable/login_bg"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginLeft="15.0px"
        android:layout_marginTop="180.0px" 
        android:layout_marginRight="15.0px"
        android:paddingTop="42.0px"
        android:paddingBottom="10.0px"
        >
        <!-- 登录界面上的logo -->
        <ImageView android:id="@+id/login_logo"
            android:background="@drawable/favicon"
            android:layout_width="80px" 
            android:layout_height="80px"/>
        
        <EditText android:id="@+id/login_edit_account"
            android:background="@drawable/edit_login"
            android:paddingLeft="45.0sp"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:layout_marginLeft="5.0dip"
			android:layout_marginTop="5.0dip" 
			android:layout_marginRight="5.0dip"
			android:layout_marginBottom="5.0px"
			android:layout_toRightOf="@+id/login_logo"
			android:layout_alignParentTop="true" 
			android:saveEnabled="true" 
			android:hint="@string/edit_account_hint"
			android:maxLength="10" 
			android:inputType="text" 
            />
        <TextView android:id="@+id/login_account_label" 
            android:textSize="16.0dip" 
            android:textColor="#ff3f3f3f"
			android:gravity="center_vertical" 
			android:paddingLeft="7.0sp" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_marginRight="15.0sp"
			android:layout_alignLeft="@+id/login_edit_account"
			android:layout_alignTop="@+id/login_edit_account"
			android:layout_alignBottom="@+id/login_edit_account" 
			android:text="@string/account_label" />
        <ImageButton android:id="@+id/more_acc"
            android:background="@drawable/more_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="1.0dip"
            android:layout_alignTop="@+id/login_edit_account"
            android:layout_alignRight="@+id/login_edit_account"
            android:layout_alignBottom="@+id/login_edit_account"/>
        
         <EditText android:id="@+id/login_edit_password"
            android:background="@drawable/edit_login"
            android:paddingLeft="45.0sp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_marginRight="1.0dip" 
			android:layout_below="@+id/login_edit_account"
			android:layout_alignLeft="@+id/login_edit_account"
			android:layout_alignRight="@+id/login_edit_account"
			android:saveEnabled="true" 
			android:hint="@string/edit_password_hint"
			android:maxLength="16" 
			android:inputType="textPassword" 
            />
        <TextView android:id="@+id/password" 
            android:textSize="16.0dip" 
            android:textColor="#ff3f3f3f"
			android:gravity="center_vertical" 
			android:paddingLeft="7.0sp" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_marginRight="15.0sp"
			android:layout_alignLeft="@+id/login_edit_password"
			android:layout_alignTop="@+id/login_edit_password"
			android:layout_alignBottom="@+id/login_edit_password" 
			android:text="@string/password_label" />
        
        <CheckBox android:id="@+id/remember_me"
            android:button="@drawable/btn_check"
            android:text="@string/remember_me"
            android:textSize="16.0sp" 
            android:textColor="#ff222222"
            android:checked="true"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:layout_below="@+id/login_edit_password"
			android:layout_alignLeft="@+id/login_edit_password"
            />
        <Button  android:id="@+id/reg_button"
            android:layout_width="130.0px"
			android:layout_height="50px" 
			android:padding="1.0dip"
			android:layout_marginRight="12.0dip" 
			android:layout_below="@+id/remember_me"
			android:layout_alignLeft="@+id/login_edit_password"
			android:text="@string/reg"
            />
         <Button  android:id="@+id/login_button"
            android:layout_width="130.0px"
			android:layout_height="50px" 
			android:padding="1.0dip"
			android:layout_marginRight="12.0dip" 
			android:layout_below="@+id/remember_me"
			android:layout_toRightOf="@+id/reg_button"
			android:text="@string/login"
            />
    </RelativeLayout>


</LinearLayout>